--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# custom
+client/assets/tilemap/tiles/split.py
+client/assets/tilemap/tiles/tilemap.png
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
