--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # custom
 client/assets/tilemap/tiles/split.py
 client/assets/tilemap/tiles/tilemap.png
+.idea
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
