--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    permissions:
+      contents: write
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -22,10 +24,10 @@ jobs:
     - name: Create distribution
       run: pyinstaller client.spec
     - name: Create pre-release
-      uses: "marvinpinto/action-automatic-releases@latest"
+      uses: "ncipollo/release-action@v1"
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "latest"
+        tag: "latest-windows"
         prerelease: true
+        makeLatest: true
         title: "Development Build"
         files: dist/*.exe
