--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Create client distribution
       run: pyinstaller client.spec
     - name: Create server distribution
-      run: pyinstaller client.spec
+      run: pyinstaller server.spec
     - name: Create pre-release
       uses: softprops/action-gh-release@v1
       with:
